# spark-temperature-processing

./: .gitignore  README.md
Architecture/: Chosen Project and Data Set.pptx
Source/: docker-compose.yml  start.bat  start.sh
Source/API/: dockerbuild.bat  pom.xml
Source/cassandra/: Dockerfile  cassandra-init.sh  dockerbuild.bat  dockerbuild.sh  ready-probe.sh
Source/kubernetes-gcloud/: deploy.sh
Source/kubernetes-gcloud-submit/: copy-files.sh  create-long-batchjob.sh  submit.sh
Source/kubernetes-gcloud/cassandra/: cassandra-service.yaml  cassandra-statefulset.yaml  deploy.sh
Source/kubernetes-gcloud/java/: api-service.yaml  api.yaml  deploy.sh  knmi.yaml  simulator.yaml  storagemiddleware-service.yaml  storagemiddleware.yaml
Source/kubernetes-gcloud/kafka/: brokers.yaml  create-topic.sh  deploy.sh  kafdrop.yaml  kafka-service.yaml  zookeeper-service.yaml  zookeeper.yaml
Source/kubernetes-gcloud/spark/: deploy.sh  spark-cluster.yaml
Source/kubernetes-local/: deploy.sh  namespace.yaml
Source/kubernetes-local/cassandra/: cassandra-service.yaml  cassandra-statefulset.yaml  deploy.sh
Source/kubernetes-local/java/: deploy.sh  simulator.yaml  storagemiddleware.yaml
Source/kubernetes-local/kafka/: brokers.yaml  create-topic.sh  (+5 more)
Source/operator/: Cargo.toml  Dockerfile
Source/operator/crds/: kafka.yaml  spec.yaml
Source/operator/src/: custom_resource_definitions.rs  main.rs  pod_templates.rs
Source/simulator/: Dockerfile  dockerbuild.bat  pom.xml
Source/spark-single-project/: build.sbt
Source/storagemiddleware/: dockerbuild.bat  pom.xml
(+70 files in other folders)
