[package]
name = "operator"
version = "0.1.0"
authors = ["HindrikStegenga <Hindrik1997@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
env_logger = "0.7.1"
log = "0.4.8"
roperator = "*"
k8s-openapi = { version = "*", features = ["v1_14"] }

[dev-dependencies]
roperator = { version = "*", features = ["testkit"] }